bpo-42780: Fix set_inheritable() for O_PATH file descriptors on Linux (GH-24172)